fixed responsive layout issues

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -576,7 +576,7 @@ input:focus {
   opacity: 0.9;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 768px) {
   main {
     flex-direction: row;
   }
